fixed overflow issue in filter

--- a/src/components/Filters/styles.scss
+++ b/src/components/Filters/styles.scss
@@ -32,7 +32,7 @@
 
     >.content {
         .tabs {
-            padding: var(--spacing-small) var(--spacing-medium);
+            padding: var(--spacing-small) 5px;
         }
         
         .filter-view-container {
